Added support for tab and shift-tab

--- a/popup.html
+++ b/popup.html
@@ -54,7 +54,7 @@
   </div>
   
   <div class="feature">Type to search link text and URLs</div>
-  <div class="feature">Use <span class="shortcut">↑</span> <span class="shortcut">↓</span> to navigate</div>
+  <div class="feature">Use <span class="shortcut">↑</span> <span class="shortcut">↓</span> or <span class="shortcut">Tab</span> <span class="shortcut">Shift+Tab</span> to navigate</div>
   <div class="feature">Press <span class="shortcut">Enter</span> to follow selected link</div>
   <div class="feature">Press <span class="shortcut">Escape</span> to cancel</div>
 </body>
